deploy/kubernetes/0-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: laf
