deploy/kubernetes/deploy.fs.yml
---
kind: Service
apiVersion: v1
metadata:
  name: storage-service
  namespace: laf
spec:
  selector:
    app: storage-service
  type: ClusterIP
  ports:
    - port: 9010
      targetPort: 9010

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service
  namespace: laf
  labels:
    app: storage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: storage-service
    spec:
      automountServiceAccountToken: false
      containers:
        - image: lafyun/storage-service:0.7.0
          name: storage-service
          resources:
            # requests:
            #   memory: "128Mi"
            #   cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          ports:
            - containerPort: 9010
      restartPolicy: Always
