deploy/kubernetes/deploy.gateway.yml
---
kind: Service
apiVersion: v1
metadata:
  name: gateway
  namespace: laf
spec:
  selector:
    app: gateway
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: http
      nodePort: 30000
    - port: 443
      targetPort: 443
      name: https

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: gateway
  namespace: laf
  labels:
    app: gateway
    type: sys
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
        type: sys
    spec:
      automountServiceAccountToken: false
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      tolerations:
        # this toleration is to have the daemonset runnable on master nodes
        # remove it if your masters can't run pods
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - image: docker.io/lafyun/gateway:0.7.4
          imagePullPolicy: IfNotPresent
          name: gateway
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
