deploy/kubernetes/deploy.sys.yml
---
kind: Service
apiVersion: v1
metadata:
  name: system-server
  namespace: laf
spec:
  selector:
    app: system-server
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-server
  namespace: laf
  labels:
    app: system-server
    type: sys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: system-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: system-server
        type: sys
    spec:
      automountServiceAccountToken: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - image: docker.io/lafyun/system-server:0.7.2
          imagePullPolicy: IfNotPresent
          name: system-server
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
          livenessProbe:
            httpGet:
              path: /health-check
              port: 9000
            initialDelaySeconds: 90
            timeoutSeconds: 10
          command: ["sh", "/app/start.sh"]
          ports:
            - containerPort: 9000
