deploy/kubernetes/fs.yml
---
kind: Service
apiVersion: v1
metadata:
  name: storage-service
  namespace: laf
spec:
  selector:
    app: storage-service
  type: ClusterIP
  ports:
    - port: 9010
      targetPort: 9010

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service
  namespace: laf
  labels:
    app: storage-service
    type: sys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: storage-service
        type: sys
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - image: docker.io/lafyun/storage-service:0.7.3
          imagePullPolicy: IfNotPresent
          name: storage-service
          resources:
            limits:
              memory: "512Mi"
              cpu: "200m"
          ports:
            - containerPort: 9010
          command: ["node", "/app/dist/index.js"]
