deploy/kubernetes/instance-controller.yml
---
kind: Service
apiVersion: v1
metadata:
  name: instance-controller
  namespace: laf
spec:
  selector:
    app: instance-controller
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instance-controller
  namespace: laf
  labels:
    app: instance-controller
    type: sys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instance-controller
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: instance-controller
        type: sys
    spec:
      automountServiceAccountToken: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 20
      containers:
        - image: docker.io/lafyun/instance-controller:0.8.0-alpha.2
          imagePullPolicy: IfNotPresent
          name: instance-controller
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /healthz
              port: http
              httpHeaders:
                - name: Referer
                  value: startupProbe
            periodSeconds: 3
            timeoutSeconds: 3
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
              httpHeaders:
                - name: Referer
                  value: readinessProbe
            periodSeconds: 10
            timeoutSeconds: 3
          command: ["npm", "run", "start"]
          ports:
            - name: http
              containerPort: 9000
