deploy/kubernetes/mongo.yml
---
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: laf
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017

### This mongodb ONLY work for demo purpose, you should config your own volume for production use!
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: laf
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - image: bitnami/mongodb:5.0
          name: mongo
          resources:
            limits:
              cpu: "200m"
              memory: "1024M"
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /bitnami/mongodb
              name: data
      volumes:
        - name: data
          hostPath:
            path: /tmp/laf-mongo-test-db      # update to your local path
            type: DirectoryOrCreate
      restartPolicy: Always
