deploy/kubernetes/service.mongodb.yml
---
kind: Service
apiVersion: v1
metadata:
  name: prod
  namespace: mongodb
spec:
  type: ExternalName
  externalName: kubernetes.docker.internal   # update for your own mongo host
