deploy/kubernetes/ingress.yml
# ingress-oss-console.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-oss-console
    namespace: laf
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 2048m
spec:
    ingressClassName: nginx
    rules:
        - host: minio.127-0-0-1.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: oss
                            port:
                                number: 9001

# ingress-oss-endpoint.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-oss-endpoint
    namespace: laf
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 2048m
        nginx.ingress.kubernetes.io/configuration-snippet: |
            if ($uri ~* "^/([0-9a-z]{3,32})\-([0-9a-z]{3,32})/(.+)$") {
              set $appid $1;
              set $bucket $2;
            }
            more_set_headers "appid: $appid";
            more_set_headers "bucket: $bucket";
            more_set_headers "Set-Cookie: appid=$appid;bucket=$bucket";
spec:
    ingressClassName: nginx
    rules:
        - host: oss.127-0-0-1.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: oss
                            port:
                                number: 9000

# ingress-oss-subdomain.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-oss-subdomain
    namespace: laf
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 2048m
        nginx.ingress.kubernetes.io/configuration-snippet: |
            if ($host ~* "^([0-9a-z]{3,32})\-([0-9a-z]{3,32})\.(.+)$") {
              set $appid $1;
              set $bucket $2;
            }
            more_set_headers "appid: $appid";
            more_set_headers "bucket: $bucket";
            more_set_headers "Set-Cookie: appid=$appid;bucket=$bucket";
spec:
    ingressClassName: nginx
    rules:
        - host: "*.oss.127-0-0-1.nip.io"
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: oss
                            port:
                                number: 9000

# ingress-sys-console.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-sys-console
    namespace: laf
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 2m
spec:
    ingressClassName: nginx
    rules:
        - host: console.127-0-0-1.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: sys-console
                            port:
                                number: 8080

# ingress-app-console.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-app-console
    namespace: laf
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    ingressClassName: nginx
    rules:
        - host: console.127-0-0-1.nip.io
          http:
              paths:
                  - path: /app-console/(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: app-console
                            port:
                                number: 8080

# ingress-sys-api.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-sys-api
    namespace: laf
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 2m
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    ingressClassName: nginx
    rules:
        - host: console.127-0-0-1.nip.io
          http:
              paths:
                  - path: /sys-api/(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: system-server
                            port:
                                number: 9000

# ingress-sys-extension-api.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-sys-extension-api
    namespace: laf-apps
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: 2m
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    ingressClassName: nginx
    rules:
        - host: console.127-0-0-1.nip.io
          http:
              paths:
                  - path: /sys-extension-api/(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: app-000000
                            port:
                                number: 8000

# ingress-apps.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-apps
    namespace: laf-apps
    annotations:
        nginx.ingress.kubernetes.io/server-snippet: |
            resolver kubernetes.default.svc.cluster.local valid=10s;
            location ~ "^/(.*)" {
              more_set_headers "request-id: $req_id";
              add_header Access-Control-Allow-Origin * always;
              add_header Access-Control-Allow-Methods GET,POST,PUT,DELETE,PATCH,OPTIONS always;
              add_header Access-Control-Allow-Headers * always;
              add_header Access-Control-Expose-Headers * always;
              add_header Access-Control-Max-Age 3600 always;
              if ($request_method = 'OPTIONS') {
                return 204;
              }

              if ($host ~* "^([0-9a-z]{3,32})\.(.+)$") {
                set $appid $1;
                set $service_id app-$appid;
              }
              add_header appid $appid;
              proxy_read_timeout 600s;
              proxy_set_header Host $host;
              proxy_set_header x-request-id $req_id;
              proxy_http_version 1.1;
              proxy_pass http://$service_id.laf-apps.svc.cluster.local:8000;

              # Upgrade websocket
              proxy_set_header Upgrade $http_upgrade;
              proxy_set_header Connection "upgrade";
            }
spec:
    ingressClassName: nginx
    rules:
        - host: "*.127-0-0-1.nip.io"
